[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/BaseMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/SettingsPanel.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/godot match 3 settings bar.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Buttons/Sound On Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Buttons/Back Button.png" type="Texture" id=5]

[node name="Settings" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="MarginContainer" parent="." index="0"]
editor/display_folded = false

[node name="MainContainer" parent="MarginContainer" index="0"]
editor/display_folded = false

[node name="Graphic" parent="MarginContainer/MainContainer" index="0"]
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 3 )
expand = true

[node name="Buttons" parent="MarginContainer/MainContainer" index="1"]
editor/display_folded = false
margin_top = 518.0
margin_bottom = 922.0

[node name="Button 1" parent="MarginContainer/MainContainer/Buttons" index="0"]
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5

[node name="Button 2" parent="MarginContainer/MainContainer/Buttons" index="1"]
margin_top = 276.0
margin_bottom = 404.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="MarginContainer/MainContainer/Buttons/Button 1" to="." method="_on_Button_1_pressed"]
[connection signal="pressed" from="MarginContainer/MainContainer/Buttons/Button 2" to="." method="_on_Button_2_pressed"]
